# serenity

./: CMakeLists.txt
.github/workflows/: cmake.yml
Userland/Applications/SoundPlayer/: AmpButton.cpp  AmpButton.h  AmpPlayerView.cpp  AmpPlayerView.h  AmpSlider.cpp  AmpSlider.h  AmpTimeDisplay.cpp  AmpTimeDisplay.h  AmpToggleButton.cpp  AmpToggleButton.h  AmpWidget.cpp  AmpWidget.h  BarsVisualizationWidget.cpp  CMakeLists.txt  Common.h  Player.cpp  Player.h  Playlist.cpp  Playlist.h  Skin.cpp  Skin.h  SoundPlayerWidgetAdvancedView.cpp  SoundPlayerWidgetAdvancedView.h  main.cpp
